Removing Croppie and Fixing CSS

--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,12 @@
 #imagePanel, #predPanel{
 		border: 1px solid #e7e7e7;
-		height: 67.5vh;/*67.5vh;*/
+		/*height: 67.5vh;/*67.5vh;*/
+		/*width: 30vw;*/
+		height: 30vw;
 	}
 
 #imagePanel{
-	padding-top: 0.5%;
+	/*padding-top: 0.5%;*/
 }
 
 #descPanel{
@@ -23,21 +25,57 @@
 	margin-right: auto;
 	
 	width: auto;
-	height: 65vh;
+	/*height: 65vh;*/
+	height: 30vw;
 }
 
 .btn{
 	font-weight: bold;
 }
 
-.btn-default{
-	color: white;
-	background-color: #BDC3C7;
-	border-color: white;
+.btn-default, .btn-default:active, .btn-default:focus{
+	transition: 0.2s;
+	color: #D0D0D0;
+	background-color: white;
+	border-color: #D0D0D0;
 }
 
-.btn-default:hover, .btn-default:active, .btn-default:focus{
-	color: #E68364;
-	background-color: white;
-	border-color: #E68364;
+.btn-default:hover{
+	transition: 0.2s;
+	color: white;
+	background-color:#8C9AA9;
+	border-color: #8C9AA9;
+	/*border-color: #E74C3C;*/
+}
+
+#predName{
+	color: #6C7A89;
+	font-size: 120%;
+	font-weight: bold;
+	text-align: left;
+	width: 80%;
+	display: inline-block;
+	padding-left: 5%;
+}
+
+#descPanel{
+	/*text-align: justify;*/
+	align-items: center;
+	justify-content: center;
+}
+
+#description{
+	height: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+#p0:hover #predName, #p1:hover #predName, #p2:hover #predName, #p3:hover #predName, #p4:hover #predName{
+	color: white;
+}
+
+#predCont{
+	display: block;
+	margin-top: 0.4vw;
 }
